--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ChernyshevaNetology.github.io/feature-highlight/",
+  "homepage": "https://ChernyshevaNetology.github.io/feature-highlight",
   "name": "feature-highlight",
   "version": "0.1.0",
   "private": true,
